objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Board_view_switched_space__c</fullName>
        <label>Board view switched space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Email_Provider_Formula__c</fullName>
        <formula>cbit__Clearbit__r.cbit__EmailProvider__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lookup to clearbit email provider</inlineHelpText>
        <label>[CB] Email Provider-Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Category_Industry__c</fullName>
        <label>[CB] Company Category Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributors_invited_user__c</fullName>
        <label>Contributors invited user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Due__c</fullName>
        <label>Current Sequence Step Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Person_Date__c</fullName>
        <label>Targeted Person Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Features_board_shown_user__c</fullName>
        <label>Features board shown user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Formula__c</fullName>
        <formula>Datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copy lead created date</inlineHelpText>
        <label>Lead Created Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Dead_Date__c</fullName>
        <label>Lifecycle Stage - Dead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Lead_Date__c</fullName>
        <label>Lifecycle Stage - Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matched_Account_Territory__c</fullName>
        <formula>Text( LeanData__Reporting_Matched_Account__r.Sales_territory__c )</formula>
        <inlineHelpText>Sales Territory of Matched Account</inlineHelpText>
        <label>Matched Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Info_mkto__c</fullName>
        <description>Original Source Info in marketo show the way a lead has entered the system for example. Web Form, List Import</description>
        <label>Original Source Info</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Type_mkto__c</fullName>
        <label>Original Source Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Last_Updated__c</fullName>
        <label>Subscription - Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>account6QAAgeInDays6sense__c</fullName>
        <description>Days the account has been in 6QA status.</description>
        <label>6sense Account 6QA Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account6QAStartDate6sense__c</fullName>
        <description>The date the account qualified for 6QA status (YYYY-MM-DD).</description>
        <label>6sense Account 6QA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountProfileScore6sense__c</fullName>
        <description>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Account Profile Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contributors_invited_space__c</fullName>
        <label>Contributors invited space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Account_Date__c</fullName>
        <label>Targeted Account Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Company_Size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Company Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Latest_Campaign__c</fullName>
        <formula>If( IsNull(  Latest_Campaign_Date__c   ),9999,
  today()- Latest_Campaign_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since the latest active campaign Response, 9999 for null</inlineHelpText>
        <label>Days Since Latest Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Features_board_shown_space__c</fullName>
        <label>Features board shown space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoverningPrivacyRegulation__c</fullName>
        <label>Governing Privacy Regulation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadGenius_Enrichment_Date__c</fullName>
        <inlineHelpText>The latest date this lead was enriched by Lead Genius</inlineHelpText>
        <label>LeadGenius Enrichment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Public_idea_suggested_user__c</fullName>
        <label>Public idea suggested user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_view_switched_user__c</fullName>
        <label>Roadmap view switched user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Assigned_to_Person__c</fullName>
        <label>[TS] Lead Assigned to Person</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WF_CB_Picklist_SubIndustry__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Marketo Program Name or Campaign that acquired the person (From Marketo)</description>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Empoyment_Domain_Formula__c</fullName>
        <formula>cbit__Clearbit__r.cbit__EmploymentDomain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Employment Company Website, lookup to clearbit</inlineHelpText>
        <label>[CB] Empoyment Domain-Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Actor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Sequence Step Actor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Note_Wrong_Routing__c</fullName>
        <label>Internal Note - Wrong Routing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_section_created_user__c</fullName>
        <label>Portal section created user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_idea_suggested_space__c</fullName>
        <label>Public idea suggested space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_view_switched_space__c</fullName>
        <label>Roadmap view switched space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRFG_Targeted_Employee_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted Employee Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Engaged_Date__c</fullName>
        <label>Lifecycle Stage - Engaged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_ID__c</fullName>
        <label>Current Sequence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Initial_Sequence_ID__c</fullName>
        <label>Initial Sequence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_section_created_space__c</fullName>
        <label>Portal section created space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_release_toggled_user__c</fullName>
        <label>Roadmap release toggled user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_CB_Picklist_IndustryGroup__c</fullName>
        <label>Industry Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry_Groups</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Category_Sub_Industry__c</fullName>
        <label>[CB] Company Category Sub Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_Source_March_2019__c</fullName>
        <description>Since LeadSource will be filling by Maketo, This field contains original value of leadSource before Marketo has been implemented</description>
        <label>Legacy Lead Source (March 2019)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account User</fullName>
                </value>
                <value>
                    <fullName>Event/Webinar</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Paid Ad</fullName>
                </value>
                <value>
                    <fullName>Referral/Partner</fullName>
                </value>
                <value>
                    <fullName>Referral: Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Sales Outbound</fullName>
                </value>
                <value>
                    <fullName>Trade Show/Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Web Sign Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ad - AdWords</fullName>
                </value>
                <value>
                    <fullName>Ad - Facebook</fullName>
                </value>
                <value>
                    <fullName>Ad - LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Ad - Twitter</fullName>
                </value>
                <value>
                    <fullName>Ad - Quora</fullName>
                </value>
                <value>
                    <fullName>Ad - Media Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Ad - Taboola</fullName>
                </value>
                <value>
                    <fullName>Ad - Outbrain</fullName>
                </value>
                <value>
                    <fullName>Content - Case Study</fullName>
                </value>
                <value>
                    <fullName>Content - eBook</fullName>
                </value>
                <value>
                    <fullName>Content - One Pager</fullName>
                </value>
                <value>
                    <fullName>Content - Webinar</fullName>
                </value>
                <value>
                    <fullName>Content - Video</fullName>
                </value>
                <value>
                    <fullName>Content - Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Event - Conference</fullName>
                </value>
                <value>
                    <fullName>Event - Happy Hour</fullName>
                </value>
                <value>
                    <fullName>Prospecting - LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Prospecting - Scraping</fullName>
                </value>
                <value>
                    <fullName>Referral - Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Customer_Date__c</fullName>
        <label>Lifecycle Stage - Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Prospect_Date__c</fullName>
        <label>LS - Engaged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pref_60_Day_Pause_Expiry_Date__c</fullName>
        <label>Pref 60-Day Pause Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Public_insight_suggested_user__c</fullName>
        <label>Public insight suggested user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roadmap_release_toggled_space__c</fullName>
        <label>Roadmap release toggled space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Nurturing_Date__c</fullName>
        <label>Lifecycle Stage - Nurturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Name__c</fullName>
        <label>Current Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step__c</fullName>
        <label>Outreach Current Sequence Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Initial_Sequence_Name__c</fullName>
        <label>Initial Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_insight_suggested_space__c</fullName>
        <label>Public insight suggested space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Extension_Requested_Date__c</fullName>
        <label>Trial Extension Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Company_Category_Industry_Group__c</fullName>
        <label>[CB] Company Category Industry Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Latest_MQL_Date__c</fullName>
        <label>Lifecycle Stage - Latest MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roadmap_visibility_toggled_user__c</fullName>
        <label>Roadmap visibility toggled user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_Formula_Employees__c</fullName>
        <formula>If(  Max_Account_Employees__c  &lt; 51, &quot;ESB&quot;,
If(  Max_Account_Employees__c  &lt; 501, &quot;SMB&quot;,
IF(Max_Account_Employees__c  &lt; 5001, 
&quot;MM&quot;,&quot;EN&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&lt;=50 ESB,
&lt;=500 SMB,
&lt;=5000,MidMarket
5001+ Enterprise</inlineHelpText>
        <label>zSales Segment Formula (Employees) - Del</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Assigned_to_Smart_Touch__c</fullName>
        <label>[TS] Lead Assigned to Smart Touch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TS_Segment_moved_to_Smart_Touch__c</fullName>
        <label>[TS] Segment moved to Smart Touch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity_column_value_set_user__c</fullName>
        <label>Complexity column value set user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Actor_Role__c</fullName>
        <formula>Current_Sequence_Step_Actor__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Sequence Step Actor Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiative_column_value_set_user__c</fullName>
        <label>Initiative column value set user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jira_import_issues_imported_user__c</fullName>
        <label>Jira import issues imported user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Status__c</fullName>
        <label>Current Sequence Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roadmap_visibility_toggled_space__c</fullName>
        <label>Roadmap visibility toggled space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TS_Segment_moved_to_Self_Service__c</fullName>
        <label>[TS] Segment moved to Self Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountNumericalReachScore6sense__c</fullName>
        <description>6sense’s current assessment of your team&apos;s outreach on the account in comparison to the other accounts where opportunities were won previously.</description>
        <label>6sense Account Numerical Reach Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complexity_column_value_set_space__c</fullName>
        <label>Complexity column value set space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiative_column_value_set_space__c</fullName>
        <label>Initiative column value set space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jira_import_issues_imported_space__c</fullName>
        <label>Jira import issues imported space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Sales_Routed_Date__c</fullName>
        <label>Lifecycle Stage - Sales Routed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Actively_being_sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actively being sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TS_Lead_Assigned_to_Solution_Sales__c</fullName>
        <label>[TS] Lead Assigned to Solution Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TS_Segment_moved_to_Solution_Sales__c</fullName>
        <label>[TS] Segment moved to Solution Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_goal_column_value_set_user__c</fullName>
        <label>Business goal column value set user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Pipeline_Added_Date__c</fullName>
        <label>Lifecycle Stage - Pipeline Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
        <label>Current Sequence Step Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Sequences__c</fullName>
        <label>Outreach Number of Active Sequences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rm_Marketing_Engagement_Score_Level__c</fullName>
        <label>Marketing Engagement Score Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TOFU</fullName>
                </value>
                <value>
                    <fullName>MOFU</fullName>
                </value>
                <value>
                    <fullName>BOFU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_goal_column_value_set_space__c</fullName>
        <label>Business goal column value set space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage_Self_Serve_Trial_Date__c</fullName>
        <label>Lifecycle Stage - Self Serve Trial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
        <label>Current Sequence Step Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_User_SFDC_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Sequence User SFDC ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sequenced_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Task_Due_Date__c</fullName>
        <label>Current Sequence Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Portal_publishing_settings_changed_user__c</fullName>
        <label>Portal publishing settings changed user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_publishing_settings_changed_space__c</fullName>
        <label>Portal publishing settings changed space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>NB_Temp</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Enriched__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Trial_Source__c</columns>
        <columns>Newsletter_Opt_In__c</columns>
        <columns>LEAD.ANNUAL_REVENUE</columns>
        <columns>Trial_Request_DT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Web Sign Up</value>
        </filters>
        <label>NB_Temp</label>
    </listViews>
    <listViews>
        <fullName>All_leads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>mkto71_Acquisition_Program__c</columns>
        <columns>Enriched__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Trial_Source__c</columns>
        <columns>Trial_Request_DT__c</columns>
        <columns>Raised__c</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Business_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All leads</label>
    </listViews>
    <listViews>
        <fullName>Event_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lifecycle_Stage__c</columns>
        <columns>City__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Tags__c</columns>
        <columns>LEAD.CONVERTED</columns>
        <columns>Demo_Requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Event/Webinar</value>
        </filters>
        <filters>
            <field>Lifecycle_Stage__c</field>
            <operation>notContain</operation>
            <value>Customer</value>
        </filters>
        <label>Product Excellence BSTN- Event Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Trial_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Nathan_0_0_Non_MQL</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Latest_MQL_Campaign__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>0.0 New,0.0 Cold / Not Started</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>BOWER</value>
        </filters>
        <label>Nathan 0.0 Non MQL</label>
    </listViews>
    <listViews>
        <fullName>Lead_with_employees</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <filterScope>Everything</filterScope>
        <label>Lead with employees</label>
    </listViews>
    <listViews>
        <fullName>Universal_New_MQL_Leads</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Matched_Account_Owner__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Lifecycle_Stage_Latest_MQL_Date__c</columns>
        <columns>Latest_MQL_Campaign__c</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>Outreach_Current_Sequence_Name__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Matched_Account_Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lifecycle_Stage_Latest_MQL_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>0.0 New,0.0 Cold / Not Started</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Universal New MQLs (Leads)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Low_Hanging_Fruit_old_MQLs</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>mk_customer_fit_score__c</columns>
        <columns>Outreach_Current_Sequence_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lifecycle_Stage_Latest_MQL_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2021</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>0.1 Contacted,Unresponsive,Nurture</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>mk_customer_fit_score__c</field>
            <operation>greaterOrEqual</operation>
            <value>70</value>
        </filters>
        <label>Low Hanging Fruit (old MQLs)</label>
    </listViews>
    <listViews>
        <fullName>Rose_s_Created_Leads_Today</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Outreach_Current_Sequence_Name__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>Rose</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Outreach_Current_Sequence_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>Rose&apos;s Created Leads (Today)</label>
    </listViews>
    <listViews>
        <fullName>Enterprise_Pricing_Requests</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <label>Enterprise Pricing Requests</label>
    </listViews>
    <listViews>
        <fullName>X1_0_My_New_Marketing_Leads</fullName>
        <booleanFilter>(1 OR 4)AND 2 AND 3</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Matched_Account_Owner__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Latest_Campaign_Date__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Latest_MQL_Campaign__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lifecycle_Stage_Latest_MQL_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>contains</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Latest_Handraiser_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>1.0 My New MQLs Leads</label>
    </listViews>
</CustomObject>